--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9"
+    "@tailwindcss/typography": "^0.5.9",
+    "prettier": "^2.8.8"
   }
 }
