--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "eslint": "^8.42.0",
     "eslint-config-next": "^13.4.4",
     "next": "^13.4.4",
+    "notion-client": "^6.16.0",
+    "notion-types": "^6.16.0",
     "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-notion-x": "^6.16.0",
     "tailwindcss": "3.3.2",
     "typescript": "^5.1.3"
   },
