--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-loader-spinner": "^6.1.6",
     "react-notion-x": "^6.16.0",
     "tailwindcss": "3.3.2",
     "typescript": "^5.1.3"
